Info modal title align fix

--- a/src/app/home/projects/project-details-dialog/project-details-dialog.component.scss
+++ b/src/app/home/projects/project-details-dialog/project-details-dialog.component.scss
@@ -18,7 +18,7 @@
   &__header {
     flex-shrink: 0;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     gap: 16px;
     margin-bottom: 20px;
